Fix homepage nav logo on mobile

--- a/wp-content/themes/hmr-theme/assets/css/less/app.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/app.less
@@ -168,7 +168,7 @@ em {
     	.banner {
     		background:@blueDark;
     		.brand {
-    			background-position:inherit;
+    			background-position:left top;
     		}
     	}
     }
